tests/errors/array_bounds_check_03.f90
program array_bounds_check_03
    integer, allocatable :: x(:)

    x = [1, 2, 3]
end program
